manifests/xai-tools-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    kubernetes.io/ingress.class: 'nginx'
  name: xai-tools-ingress
  namespace: tango-development
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - k8s-cluster.tango.rid-intrasoft.eu
    secretName: xai-tools-cert-tls
  rules:
  - host: k8s-cluster.tango.rid-intrasoft.eu
    http:
      paths:
      - path: /development/xai-tools/app(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: xai-tools
            port:
              number: 80
      - path: /development/xai-tools/api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: xai-tools
            port:
              number: 8080
